# turtlebot4_setup

./: CHANGELOG.rst  CMakeLists.txt  CONTRIBUTING.md  README.md  package.xml  turtlebot4_packages.repos
.github/ISSUE_TEMPLATE/: 1-bug.yml  bug.md
.github/workflows/: ci.yml
boot/firmware/: cmdline.txt
conf/: chrony.conf  cyclonedds_pc.xml  cyclonedds_rpi.xml  webserver.service
debian/: install  postinst
discovery/: discovery.sh  setup.bash
etc/: motd  rc.local
etc/chrony/: chrony.conf
etc/netplan/: 40-ethernets.yaml  50-wifis.yaml
etc/turtlebot4/: aliases.bash  cyclonedds_rpi.xml  discovery.conf  discovery.sh  docker-compose.yml  fastdds_discovery_create3.xml  fastdds_rpi.xml  setup.bash  system
etc/turtlebot4/docker/: Dockerfile  build.sh
etc/turtlebot4/docker/config/: create3.env  fastrtps-repub.xml
etc/turtlebot4/firmware/: config.txt
ip_route/: ip_route.service  ip_route.sh
scripts/: bluetooth.sh  create_update.sh  create_update_0.4.0.sh  galactic.sh  humble.sh  install.py  jazzy.sh  oakd.sh  ros_config.sh  sd_flash.sh  swap_off.sh  swap_on.sh  turtlebot4_setup.sh  uninstall.py  wifi.sh
turtlebot4_discovery/: configure_discovery.sh  configure_ip_route.sh  discovery.conf  discovery.sh  fastdds_discovery_super_client.xml  ip_route.service  ip_route.sh  setup.bash
turtlebot4_setup/: CMakeLists.txt  README.md  conf.py  menu.py  ros_setup.py  turtlebot4_packages.repos  turtlebot4_setup  wifi.py
turtlebot4_setup/scripts/: oakd_lite.sh  oakd_pro.sh  oakd_pro_dependencies.sh  turtlebot4_setup.sh  wifi.sh
turtlebot4_setup/udev/: turtlebot4.rules
udev/: 50-turtlebot4.rules  99-gpio.rules
