<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot4_setup</name>
  <version>1.0.3</version>
  <description>Turtlebot4 setup scripts</description>
  <maintainer email="rkreinin@clearpathrobotics.com">rkreinin</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rmw_cyclonedds_cpp</exec_depend>
  <exec_depend>rmw_fastrtps_cpp</exec_depend>
  <exec_depend>robot_upstart</exec_depend>
  <exec_depend>simple_term_menu_vendor</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
